==> ohilab/libohiboard/source/PIC24FJ/i2c_PIC24FJ.c <==
#include "platforms.h"
#include "i2c.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#include "interrupt.h"
#define IIC_MAX_BAUDRATE                  1000000u
#define IIC_MAX_SCL_TICK                  256u
#define IIC_MAX_NBYTE_SIZE                255u
#define IIC_DEVICE_ENABLE(REGMAP)        (REGMAP->I2CCON1 |= _I2C1CON1_I2CEN_MASK)
#define IIC_DEVICE_DISABLE(REGMAP)       (REGMAP->I2CCON1 &= ~_I2C1CON1_I2CEN_MASK)
#define IIC_ENABLE_INTERRUPTS(DEVICE)   do {                                     \
                                            Interrupt_enable(DEVICE->isrMaster); \
                                            Interrupt_enable(DEVICE->isrSlave);  \
                                        } while (0)
#define IIC_DISABLE_INTERRUPTS(DEVICE)  do {                                      \
                                            Interrupt_disable(DEVICE->isrMaster); \
                                            Interrupt_disable(DEVICE->isrSlave);  \
                                        } while (0)
#define IIC_VALID_ADDRESSMODE(ADDRESSMODE) (((ADDRESSMODE) == IIC_SEVEN_BIT)  || \
                                            ((ADDRESSMODE) == IIC_TEN_BIT))
#define IIC_VALID_BAUDRATE(BAUDRATE) ((BAUDRATE) <= IIC_MAX_BAUDRATE)
#define IIC_VALID_REGISTERADDRESSSIZE(SIZE) (((SIZE) == IIC_REGISTERADDRESSSIZE_8BIT)  || \
                                             ((SIZE) == IIC_REGISTERADDRESSSIZE_16BIT))

static System_Errors Iic_setBaudrate (Iic_DeviceHandle dev, uint32_t baudrate)
{
    uint32_t frequency = 0;
    uint32_t scaled = 0;
    uint32_t diff = 0xFFFFFFFFu;
    uint16_t br = 2u;

    frequency = Clock_getOutputValue(CLOCK_OUTPUT_PERIPHERAL);

    // Current clock is different from 0
    if (frequency != 0u)
    {
        for (uint16_t i = 2; i < 65536; ++i)
        {
            // Divide by possible prescaler
            scaled = frequency / ((i + 2) * 2);

            // Check if frequency scaled is grater then baudrate
            if (scaled < baudrate)
            {
                if ((baudrate - scaled) < diff)
                {
                    diff = baudrate - scaled;
                    br = i;
                }
            }
            else if (scaled > baudrate)
            {
                if ((scaled - baudrate) < diff)
                {
                    diff = scaled - baudrate;
                    br = i;
                }
            }
            else
            {
                br = i;
                // The prescaled value is equal to request baudrate!
                break;
            }
        }
        
        if (diff == 0xFFFFFFFFul)
            return ERRORS_IIC_WRONG_BAUDRATE;

        // Save new prescaler into register
        dev->regmap->I2CBRG = br;
    }
    else
    {
        return ERRORS_IIC_CLOCKSOURCE_FREQUENCY_TOO_LOW;
    }
    return ERRORS_NO_ERROR;
}

static System_Errors Iic_config (Iic_DeviceHandle dev, Iic_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;

    err |= ohiassert(IIC_VALID_MODE(config->devType));
    err |= ohiassert(IIC_VALID_ADDRESSMODE(config->addressMode));
    err |= ohiassert(IIC_VALID_BAUDRATE(config->baudrate));
    if (err != ERRORS_NO_ERROR)
        return ERRORS_IIC_WRONG_PARAM;

    dev->config = *config;
    
    // Disable the device
    IIC_DEVICE_DISABLE(dev->regmap);

    // Configure Baudrate
    err = Iic_setBaudrate(dev,config->baudrate);
    if (err != ERRORS_NO_ERROR)
        return ERRORS_IIC_WRONG_PARAM;

    // Save address mode (7-bit or 10-bit)
    dev->regmap->I2CCON1 = dev->regmap->I2CCON1 & (~(_I2C1CON1_A10M_MASK));
    if (config->addressMode == IIC_TEN_BIT)
    {
        dev->regmap->I2CCON1 |= _I2C1CON1_A10M_MASK;
    }

    // Configuration ended... enable device
    IIC_DEVICE_ENABLE(dev->regmap);
    return ERRORS_NO_ERROR;
}

System_Errors Iic_init (Iic_DeviceHandle dev, Iic_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the I2C device
    if (dev == NULL)
    {
        return ERRORS_IIC_NO_DEVICE;
    }
    // Check the I2C instance
    err = ohiassert(IIC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_DEVICE;
    }
    
    // Enable peripheral clock if needed
    if (dev->state == IIC_DEVICESTATE_RESET)
    {
        // Enable peripheral
        UTILITY_CLEAR_REGISTER_BIT(*dev->pmdRegisterPtr, dev->pmdRegisterEnable);
        
        // Enable pins
        // Not used because the pins are fixed for I2C
#if 0
        if (config->sclPin != IIC_PINS_SCLNONE)
            Iic_setSclPin(dev, config->sclPin, config->pullupEnable);

        if (config->sdaPin != IIC_PINS_SDANONE)
            Iic_setSdaPin(dev, config->sdaPin, config->pullupEnable);
#endif
    }
    dev->state = IIC_DEVICESTATE_BUSY;
    
    // Configure the peripheral
    err = Iic_config(dev,config);
    if (err != ERRORS_NO_ERROR)
    {
        // FIXME: Call deInit?
        return err;
    }

#if 0
    // Clear NACK flag
    dev->regmap->ICR |= I2C_ICR_NACKCF_Msk;

    // Clear STOPF flag
    dev->regmap->ICR |= I2C_ICR_STOPCF_Msk;
#endif
    
    dev->state = IIC_DEVICESTATE_READY;
    return ERRORS_NO_ERROR;
}

System_Errors Iic_readRegister (Iic_DeviceHandle dev,
                                uint16_t devAddress,
                                uint16_t regAddress,
                                Iic_RegisterAddressSize addressSize,
                                uint8_t* data,
                                uint16_t length,
                                uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the I2C device
    if (dev == NULL)
    {
        return ERRORS_IIC_NO_DEVICE;
    }
    // Check the I2C instance
    err = ohiassert(IIC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_DEVICE;
    }
    err = ohiassert(IIC_VALID_REGISTERADDRESSSIZE(addressSize));
    // Check the data buffer
    err = ohiassert(data != NULL);
    // Check the number of byte requested
    err = ohiassert(length != 0);
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_PARAM;
    }

    // Check if the device is busy
    // FIXME: the timeout is not usable
    Iic_waitUntilIdle(dev,0);

    // Save transfer parameter
    dev->rdata = data;
    dev->bufferCount = length;

    // Send start conditions
    Iic_start(dev);
    Iic_waitUntilIdle(dev,0);

    // Write device address
    // Wait till data is transmitted.
    dev->regmap->I2CTRN = ((devAddress << 1) & 0x00FF);
    // Check collision and idle status
    if (dev->regmap->I2CSTAT & _I2C1STAT_IWCOL_MASK);
    Iic_waitUntilIdle(dev,0);
    // Check ACK
    if (dev->regmap->I2CSTAT & _I2C1STAT_ACKSTAT_MASK)
    {
        err = ERRORS_IIC_TX_ACK_NOT_RECEIVED;
        goto i2cerror;
    }

    // Write register/memory address
    if (addressSize == IIC_REGISTERADDRESSSIZE_8BIT)
    {
        dev->regmap->I2CTRN = (regAddress & 0x00FF);
        // Check collision and idle status
        if (dev->regmap->I2CSTAT & _I2C1STAT_IWCOL_MASK);
        Iic_waitUntilIdle(dev,0);
        // Check ACK
        if (dev->regmap->I2CSTAT & _I2C1STAT_ACKSTAT_MASK)
        {
            err = ERRORS_IIC_TX_ACK_NOT_RECEIVED;
            goto i2cerror;
        }
    }
    else
    {
        // MSB part of register address
        dev->regmap->I2CTRN = (uint8_t)((regAddress & 0xFF00u) >> 8u);
        // Check collision and idle status
        if (dev->regmap->I2CSTAT & _I2C1STAT_IWCOL_MASK);
        Iic_waitUntilIdle(dev,0);
        // Check ACK
        if (dev->regmap->I2CSTAT & _I2C1STAT_ACKSTAT_MASK)
        {
            err = ERRORS_IIC_TX_ACK_NOT_RECEIVED;
            goto i2cerror;
        }

        // LSB part of register address        
        dev->regmap->I2CTRN = (uint8_t)(regAddress & 0x00FFu);
        // Check collision and idle status
        if (dev->regmap->I2CSTAT & _I2C1STAT_IWCOL_MASK);
        Iic_waitUntilIdle(dev,0);
        // Check ACK
        if (dev->regmap->I2CSTAT & _I2C1STAT_ACKSTAT_MASK)
        {
            err = ERRORS_IIC_TX_ACK_NOT_RECEIVED;
            goto i2cerror;
        }        
    }

    // Send repeated start...
    Iic_repeatedStart(dev);
    Iic_waitUntilIdle(dev,0);

    // Write device address for reading
    // Wait till data is transmitted.
    dev->regmap->I2CTRN = (((devAddress << 1) | 0x0001) & 0x00FF);
    if (dev->regmap->I2CSTAT & _I2C1STAT_IWCOL_MASK);
    Iic_waitUntilIdle(dev,0);
    if (dev->regmap->I2CSTAT & _I2C1STAT_ACKSTAT_MASK)
    {
        err = ERRORS_IIC_TX_ACK_NOT_RECEIVED;
        goto i2cerror;
    }

    // Start reading bytes
    do
    {
        // Put the peripheral in receive mode
        // This bit automatically cleared by hardware at end of 8-bit receive data byte
        dev->regmap->I2CCON1 |= _I2C1CON1_RCEN_MASK;
        while (dev->regmap->I2CCON1 & _I2C1CON1_RCEN_MASK);
        // Clear Receive Overflow Flag Bit (I2COV)
        dev->regmap->I2CSTAT &= ~_I2C1STAT_I2COV_MASK;
        // Check idle status...
        Iic_waitUntilIdle(dev,0);

        // Read data from RXDR
        (*dev->rdata++) = dev->regmap->I2CRCV;

        // Send ACK
        if (dev->bufferCount > 1)
        {
            dev->regmap->I2CCON1 &= ~_I2C1CON1_ACKDT_MASK;
            dev->regmap->I2CCON1 |=  _I2C1CON1_ACKEN_MASK;            
        }
        else
        {
            // After last byte, send NACK
            dev->regmap->I2CCON1 |= _I2C1CON1_ACKDT_MASK;
            dev->regmap->I2CCON1 |= _I2C1CON1_ACKEN_MASK;            
        }

        // Check idle status...
        Iic_waitUntilIdle(dev,0);

        dev->bufferCount--;
    }
    while (dev->bufferCount > 0u);

i2cerror:

    // Send stop conditions
    Iic_stop(dev);
    // Check idle status...
    Iic_waitUntilIdle(dev,0);

    return err;
}
