==> ohilab/libohiboard/source/STM32L4/i2c_STM32L4.c <==
#include "platforms.h"
#include "i2c.h"
#include "utility.h"
#include "gpio.h"
#include "clock.h"
#define IIC_MAX_PINS                      8
#define IIC_MAX_BAUDRATE                  1000000u
#define IIC_MAX_SCL_TICK                  256u
#define IIC_MAX_NBYTE_SIZE                255u
#define IIC_CLOCK_ENABLE(REG,MASK) do { \
                                     UTILITY_SET_REGISTER_BIT(REG,MASK); \
                                     asm("nop"); \
                                     (void) UTILITY_READ_REGISTER_BIT(REG,MASK); \
                                   } while (0)
#define IIC_DEVICE_ENABLE(REGMAP)        (REGMAP->CR1 |= I2C_CR1_PE)
#define IIC_DEVICE_DISABLE(REGMAP)       (REGMAP->CR1 &= ~I2C_CR1_PE)
#define IIC_VALID_CLOCK_SOURCE(CLOCKSOURCE) (((CLOCKSOURCE) == IIC_CLOCKSOURCE_PCLK)  || \
                                             ((CLOCKSOURCE) == IIC_CLOCKSOURCE_HSI)   || \
                                             ((CLOCKSOURCE) == IIC_CLOCKSOURCE_SYSCLK))
#define IIC_VALID_ADDRESSMODE(ADDRESSMODE) (((ADDRESSMODE) == IIC_SEVEN_BIT)  || \
                                            ((ADDRESSMODE) == IIC_TEN_BIT))
#define IIC_VALID_DUALADDRESS(DUALADDRESS) (((DUALADDRESS) == IIC_DUALADDRESS_ENABLE)  || \
                                            ((DUALADDRESS) == IIC_DUALADDRESS_DISABLE))

static System_Errors Iic_setBaudrate (Iic_DeviceHandle dev, uint32_t baudrate)
{
    uint32_t frequency = 0;
    uint32_t scaled = 0;

    if (baudrate > IIC_MAX_BAUDRATE)
    {
        return ERRORS_IIC_WRONG_BAUDRATE;
    }

    // Get current parent clock
    switch (dev->config.clockSource)
    {
    case IIC_CLOCKSOURCE_HSI:
        frequency = (uint32_t)CLOCK_FREQ_HSI;
        break;
    case IIC_CLOCKSOURCE_SYSCLK:
        frequency = Clock_getOutputValue(CLOCK_OUTPUT_SYSCLK);
        break;
    case IIC_CLOCKSOURCE_PCLK:
        frequency = Clock_getOutputValue(CLOCK_OUTPUT_PCLK2);
        break;
    default:
        ohiassert(0);
        return ERRORS_IIC_NO_CLOCKSOURCE;
    }

    // Current clock is different from 0
    if (frequency != 0u)
    {
        for (uint8_t i = 0; i < 16; ++i)
        {
            // Divide by possible prescaler
            scaled = frequency / (i + 1);

            // Check if frequency scaled is grater then baudrate
            if (scaled < baudrate)
            {
                // Exit from for...
                return ERRORS_IIC_WRONG_PARAM;
            }
            else
            {
                // Compute tick for each SCL level
                // 4 ticks is for TSYNC1 and TSYNC2
                uint16_t tick = (uint16_t)((scaled / baudrate) / 2);
                // Save ticks if it is usable
                if ((tick < IIC_MAX_SCL_TICK) && (tick > 4))
                {
                    dev->regmap->TIMINGR = (i << I2C_TIMINGR_PRESC_Pos)                     |
                                           (((tick - 1) & 0x00FFu) << I2C_TIMINGR_SCLH_Pos) |
                                           (((tick - 5) & 0x00FFu) << I2C_TIMINGR_SCLL_Pos);
                    break;
                }
                else
                {
                    // Try with the next prescaler!
                    continue;
                }
            }
        }
    }
    else
    {
        return ERRORS_IIC_CLOCKSOURCE_FREQUENCY_TOO_LOW;
    }

    return ERRORS_NO_ERROR;
}

static System_Errors Iic_config (Iic_DeviceHandle dev, Iic_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;

    err |= ohiassert(IIC_VALID_MODE(config->devType));
    err |= ohiassert(IIC_VALID_ADDRESSMODE(config->addressMode));
    err |= ohiassert(IIC_VALID_OWN_ADDRESS1(config->address1));
    err |= ohiassert(IIC_VALID_OWN_ADDRESS2(config->address2));
    err |= ohiassert(IIC_VALID_DUALADDRESS(config->dualAddressMode));
    err |= ohiassert(IIC_VALID_DUALMASK(config->dualAddressMask));
    err |= ohiassert(IIC_VALID_NOSTRETCH(config->noStretch));
    err |= ohiassert(IIC_VALID_BAUDRATE(config->baudrate));
    if (err != ERRORS_NO_ERROR)
        return ERRORS_IIC_WRONG_PARAM;

    // Save current configuration
    dev->config = *config;

    // Disable the device
    IIC_DEVICE_DISABLE(dev->regmap);

    // Configure Baudrate
    err = Iic_setBaudrate(dev,dev->config.baudrate);
    if (err != ERRORS_NO_ERROR)
        return ERRORS_IIC_WRONG_PARAM;

    // Save address mode (7-bit or 10-bit)
    dev->regmap->CR2 = dev->regmap->CR2 & (~(I2C_CR2_ADD10_Msk));
    if (dev->config.addressMode == IIC_TEN_BIT)
    {
        dev->regmap->CR2 |= I2C_CR2_ADD10_Msk;
    }

    // Enable by default AUTOEND and NACK (NOT usable in master mode)
    dev->regmap->CR2 |= (I2C_CR2_AUTOEND_Msk | I2C_CR2_NACK_Msk);

    // Disable own address1 before set new one
    dev->regmap->OAR1 = dev->regmap->OAR1 & (~(I2C_OAR1_OA1EN_Msk));
    // Configure own address 1
    if (dev->config.addressMode == IIC_SEVEN_BIT)
    {
        dev->regmap->OAR1 = I2C_OAR1_OA1EN_Msk | ((dev->config.address1 << 1) & 0x000000FEu);
    }
    else
    {
        dev->regmap->OAR1 = I2C_OAR1_OA1EN_Msk | I2C_OAR1_OA1MODE_Msk | dev->config.address1;
    }

    // Disable own address 2 and check the user config
    dev->regmap->OAR2 = dev->regmap->OAR2 & (~(I2C_OAR2_OA2EN_Msk));
    if (dev->config.dualAddressMode == IIC_DUALADDRESS_ENABLE)
    {
        dev->regmap->OAR2 = I2C_OAR2_OA2EN_Msk | (((uint8_t)dev->config.dualAddressMask) << I2C_OAR2_OA2MSK_Pos) | dev->config.address2;
    }

    // Configure no-stretch mode
    dev->regmap->CR1 = dev->regmap->CR1 & (~(I2C_CR1_NOSTRETCH_Msk));
    if (dev->config.noStretch == IIC_NOSTRETCH_ENABLE)
    {
        dev->regmap->CR1 |= I2C_CR1_NOSTRETCH_Msk;
    }

    // Configuration ended... enable device
    IIC_DEVICE_ENABLE(dev->regmap);
    return ERRORS_NO_ERROR;
}

System_Errors Iic_init (Iic_DeviceHandle dev, Iic_Config* config)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the I2C device
    if (dev == NULL)
    {
        return ERRORS_IIC_NO_DEVICE;
    }
    // Check the I2C instance
    err = ohiassert(IIC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_DEVICE;
    }
    // Check clock source selections
    err = ohiassert(IIC_VALID_CLOCK_SOURCE(config->clockSource));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_PARAM;
    }

    // Enable peripheral clock if needed
    if (dev->state == IIC_DEVICESTATE_RESET)
    {
        // Select clock source
        UTILITY_MODIFY_REGISTER(*dev->rccTypeRegisterPtr,dev->rccTypeRegisterMask,(config->clockSource << dev->rccTypeRegisterPos));
        // Enable peripheral clock
        IIC_CLOCK_ENABLE(*dev->rccRegisterPtr,dev->rccRegisterEnable);

        // Enable pins
        if (config->sclPin != IIC_PINS_SCLNONE)
            Iic_setSclPin(dev, config->sclPin, config->pullupEnable);

        if (config->sdaPin != IIC_PINS_SDANONE)
            Iic_setSdaPin(dev, config->sdaPin, config->pullupEnable);
    }
    dev->state = IIC_DEVICESTATE_BUSY;

    // Configure the peripheral
    err = Iic_config(dev,config);
    if (err != ERRORS_NO_ERROR)
    {
        Iic_deInit(dev);
        return err;
    }

    // Clear NACK flag
    dev->regmap->ICR |= I2C_ICR_NACKCF_Msk;

    // Clear STOPF flag
    dev->regmap->ICR |= I2C_ICR_STOPCF_Msk;

    dev->state = IIC_DEVICESTATE_READY;

    return ERRORS_NO_ERROR;
}

System_Errors Iic_readRegister (Iic_DeviceHandle dev,
                                uint16_t devAddress,
                                uint16_t regAddress,
                                Iic_RegisterAddressSize addressSize,
                                uint8_t* data,
                                uint16_t length,
                                uint32_t timeout)
{
    System_Errors err = ERRORS_NO_ERROR;
    // Check the I2C device
    if (dev == NULL)
    {
        return ERRORS_IIC_NO_DEVICE;
    }
    // Check the I2C instance
    err = ohiassert(IIC_IS_DEVICE(dev));
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_DEVICE;
    }
    err = ohiassert(IIC_VALID_REGISTERADDRESSSIZE(addressSize));
    // Check the data buffer
    err = ohiassert(data != NULL);
    // Check the number of byte requested
    err = ohiassert(length != 0);
    if (err != ERRORS_NO_ERROR)
    {
        return ERRORS_IIC_WRONG_PARAM;
    }

    // Shift 7-bit address
    if (dev->config.addressMode == IIC_SEVEN_BIT)
    {
        devAddress = ((devAddress << 1u) & 0x00FFu);
    }

    // Check if the device is busy
    // Wait 25ms before enter into timeout!
    err = Iic_waitUntilSet(dev,I2C_ISR_BUSY,(System_currentTick() + 25u));
    if (err != ERRORS_NO_ERROR) goto i2cerror;

    // Init timeout
    uint32_t tickStart = System_currentTick();

    // Save transfer parameter
    dev->rdata = data;
    dev->bufferCount = length;

    // Send register address
    // Configure transfer
    UTILITY_MODIFY_REGISTER(dev->regmap->CR2,                                                     \
                            (IIC_TRANSFER_CONFIG_MASK),                                           \
                            (((uint32_t)devAddress  << I2C_CR2_SADD_Pos)   & I2C_CR2_SADD_Msk)  | \
                            (((uint32_t)addressSize << I2C_CR2_NBYTES_Pos) & I2C_CR2_NBYTES_Msk)| \
                            ((I2C_CR2_START_Msk)));
    // Check TXE status
    err = Iic_waitUntilClear(dev,I2C_ISR_TXE,(tickStart + timeout));
    if (err != ERRORS_NO_ERROR) goto i2cerror;

    // Write register/memory address
    if (addressSize == IIC_REGISTERADDRESSSIZE_8BIT)
    {
        dev->regmap->TXDR = (uint8_t)(regAddress & 0x00FFu);
    }
    else
    {
        // Write MSB part of address
        dev->regmap->TXDR = (uint8_t)((regAddress & 0xFF00u) >> 8u);
        err = Iic_waitUntilTXSI(dev,(tickStart+ timeout));
        if (err != ERRORS_NO_ERROR) goto i2cerror;
        // Write LSB part of address
        dev->regmap->TXDR = (uint8_t)(regAddress & 0x00FFu);
    }
    // Wait until the transmission ends
    Iic_waitUntilClear(dev,I2C_ISR_TC,(tickStart + timeout));
    if (err != ERRORS_NO_ERROR) goto i2cerror;

    // Now read the data from the selected register
    // Set NBYTES to read and reload if length is grater then NBYTE max size
    if (dev->bufferCount > IIC_MAX_NBYTE_SIZE)
    {
        dev->bufferSize = IIC_MAX_NBYTE_SIZE;
        UTILITY_MODIFY_REGISTER(dev->regmap->CR2,                                                          \
                                (IIC_TRANSFER_CONFIG_MASK),                                                \
                                (((uint32_t)devAddress       << I2C_CR2_SADD_Pos)   & I2C_CR2_SADD_Msk)  | \
                                (((uint32_t)dev->bufferSize  << I2C_CR2_NBYTES_Pos) & I2C_CR2_NBYTES_Msk)| \
                                (I2C_CR2_RELOAD_Msk)                                                     | \
                                (I2C_CR2_START_Msk)                                                      | \
                                (I2C_CR2_RD_WRN_Msk));
    }
    else
    {
        dev->bufferSize =  dev->bufferCount;
        UTILITY_MODIFY_REGISTER(dev->regmap->CR2,                                                          \
                                (IIC_TRANSFER_CONFIG_MASK),                                                \
                                (((uint32_t)devAddress       << I2C_CR2_SADD_Pos)   & I2C_CR2_SADD_Msk)  | \
                                (((uint32_t)dev->bufferSize  << I2C_CR2_NBYTES_Pos) & I2C_CR2_NBYTES_Msk)| \
                                (I2C_CR2_AUTOEND_Msk)                                                    | \
                                (I2C_CR2_START_Msk)                                                      | \
                                (I2C_CR2_RD_WRN_Msk));
    }

    // Start reading bytes
    do
    {
        // Wait until Receive Data Register Not Empty
        err = Iic_waitUntilClear(dev,I2C_ISR_RXNE,tickStart+timeout);
        if (err != ERRORS_NO_ERROR) goto i2cerror;

        // Read data from RXDR
        (*dev->rdata++) = dev->regmap->RXDR;
        dev->bufferSize--;
        dev->bufferCount--;

        // Check if new packet is request
        if ((dev->bufferCount != 0u) && (dev->bufferSize == 0u))
        {
            // Wait until reception is complete
            err = Iic_waitUntilClear(dev,I2C_ISR_TCR,(tickStart+timeout));
            if (err != ERRORS_NO_ERROR) goto i2cerror;

            // Configure new packet without start and stop bits
            // Set NBYTES to read and reload if length is grater then NBYTE max size
            if (dev->bufferCount > IIC_MAX_NBYTE_SIZE)
            {
                dev->bufferSize = IIC_MAX_NBYTE_SIZE;
                UTILITY_MODIFY_REGISTER(dev->regmap->CR2,                                                          \
                                        (IIC_TRANSFER_CONFIG_MASK),                                                \
                                        (((uint32_t)devAddress       << I2C_CR2_SADD_Pos)   & I2C_CR2_SADD_Msk)  | \
                                        (((uint32_t)dev->bufferSize  << I2C_CR2_NBYTES_Pos) & I2C_CR2_NBYTES_Msk)| \
                                        (I2C_CR2_RELOAD_Msk));
            }
            else
            {
                dev->bufferSize = dev->bufferCount;
                UTILITY_MODIFY_REGISTER(dev->regmap->CR2,                                                          \
                                        (IIC_TRANSFER_CONFIG_MASK),                                                \
                                        (((uint32_t)devAddress       << I2C_CR2_SADD_Pos)   & I2C_CR2_SADD_Msk)  | \
                                        (((uint32_t)dev->bufferSize  << I2C_CR2_NBYTES_Pos) & I2C_CR2_NBYTES_Msk)| \
                                        (I2C_CR2_AUTOEND_Msk));
            }

        }
    }
    while (dev->bufferCount > 0u);


    // Wait until STOPF flag is set (with AUTOEND the STOP bit is generated automatically)
    err = Iic_waitUntilClear(dev,I2C_ISR_STOPF,(tickStart+timeout));

    // Check the NACK status
    if ((dev->regmap->ISR & I2C_ISR_NACKF) != 0)
    {
        err = ERRORS_IIC_RX_WRONG_EVENT;
    }

i2cerror:

    // Clear NACK flag
    dev->regmap->ICR |= I2C_ICR_NACKCF_Msk;

    // Clear STOPF flag
    dev->regmap->ICR |= I2C_ICR_STOPCF_Msk;

    // Clear configuration register
    UTILITY_MODIFY_REGISTER(dev->regmap->CR2,(IIC_TRANSFER_CONFIG_MASK),0u);

    return err;
}
